2013-11-30  James Hunt  <james.hunt@ubuntu.com>

	* src/tests/check_all_args.in: Don't run XML tests if control
	  characters found in the environment (for example in $TERMCAP
	  when running under GNU Screen) since XMl validation will fail
	  (which is only partly reasonable given that such charactes
	  cannot be reliably encoded in XML anyway).

2013-11-29  Dave Love  <fx@gnu.org>

	* Fix for building on RHEL 5 (LP: #1256415).

2013-11-29  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - Use PROCENV_GNU_BSD rather than PROCENV_LINUX_BSD_KERNEL.
	  - Make use of generic stubs where appropriate.
	  - encode_string(): Handle non-printables for JSON and XML.
	    Note that they cannot be fully handled in XML as it disallows
	    encoding control characters so a validating parser will choke
	    on the output in that case.
	* src/tests/check_all_args.in:
	  - Explicit test for json_pp.
	  - Generate more details on error.
	  - Protect against silent failure when setting section.

2013-11-28  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - Use PROCENV_LINUX_BSD_KERNEL rather than raw define value for
	    kFreeBSD systems.
	  - Tweaks to hide NUMA from BSD systems.
	  - usage(): Added missing entry for --memory (as caught by new test).
	  - Made os-specific function names saner.
	  - Make Linux-specific functions still display a heading by using
	    stubs. This fixes the tests, makes the code slightly clearer
	    (hopefully not at the expense of the user).
	* src/procenv.h:
	  - Added PROCENV_LINUX_BSD_KERNEL for kFreeBSD systems.
	* src/tests/check_all_args.in:
	  - New test to ensure that all sections generated by default output
	    have a corresponding command-line option.

2013-11-27  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Check for libnuma.
	* man/procenv.1:
	  - Updated date.
	  - Add -Y/--memory.
	* src/procenv.c:
	  - show_misc(): Memory page size moved to show_memory().
	  - show_memory(): New function.
	  - dump():