@@ -1,3 +1,10 @@
+2013-12-02  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c:
+	  - show_mounts_linux(): Always initialise locals.
+	  - show_compiler(): Guard __TIMESTAMP__ which isn't available
+	    on old compilers.
+
 2013-11-30  James Hunt  <james.hunt@ubuntu.com>
 
 	* src/tests/check_all_args.in: Don't run XML tests if control
